--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,28 @@
     }
 }
 .waveWrapper {
+    opacity: 0.9;
+
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
     margin: auto;
 }
+
+.app-container{
+    background-image: linear-gradient(to top, #86377b 20%, #27273c 80%);
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+    bottom: -1px;
+        /* position: absolute; */
+
+}
+
+
 .waveWrapperInner {
     position: absolute;
     width: 100%;
