--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,8 @@
   
   
   nav {
-    display: flex;
+    
+    display: absolute;
     justify-content: space-between;
     align-items: center;
     /* background-color: rgba(0, 0, 0, 0.7); */
@@ -36,8 +37,9 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
 
 
   .container2{
-    /* background-color: rgba(0, 0, 0, 0.7); */
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    /* background-color: white; */
+    /* opacity: 0.75; */
     border-color: #7400B8;
     /* border: 2px solid black;  */
     border: 5px solid #7400B8;
