--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,19 @@
 }
 
 
+.navbar-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }
+
+.navbar{
+    
+}
+
+
 .cover-container {
     display: flex;
     flex-direction: column;
