--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -58,6 +58,13 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     border: none;
   }
   
+  input {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+  }
+
   .topnav .search-container button {
     float: right;
     padding: 6px 10px;
@@ -100,7 +107,10 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     justify-content: center;
     margin-left: 5%;
     margin-top: 5%;
-    gap: 10px 30px;
+    align-content: flex-start;
+    row-gap: 2px;
+    column-gap: 2px;
+    /* gap: 10px 30px; */
   }
 
 
@@ -258,7 +268,7 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     margin-left: 10%;
   }
 
-  /* .text{
+   .text{
     width: 15%;
     height: 2vh;
     align-items: center;
@@ -267,7 +277,7 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     border-style: double;
 
   
-  } */
+  } 
   input[type="text"] {
     width: 15%;
     height: 2vh;
