--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -143,12 +143,12 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     border-radius: 10px;
     background-color: rgb(202, 198, 198);
     color: black;
-    margin-left: -20%;
+    margin-left: 20%;
     margin-top: -79%;
   }
 
   .searchButton{
-    margin-left: -19%;
+    margin-left: 19%;
     border-radius: 9px;
     justify-content: center;
     align-items: center;
@@ -166,21 +166,26 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
   }
 
   h3{
-    margin-left: 99%;
-    /* margin-right: 16%; */
-    margin-top: -2%;
-    font-size: 220%;
-
+    width: 150%;
+    font-size: 300%;
+    margin-left: 30%;
     color: #7400B8;
+    margin-top: 20%;
   }
 
   h4{
     width: 150%;
     font-size: 180%;
-    margin-left: -38%;
+    margin-left: 5%;
   }
 
   h5{
+    margin-left: 19%;
+    font-size: 180%;
+    color: #7400B8;
+  }
+
+  h6{
     margin-left: 10%;
     font-size: 180%;
     color: #7400B8;
@@ -197,6 +202,7 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     margin-left: 30%;
     color: #7400B8;
     margin-right: 17%;
+    margin-top: -6%;
   }
 
   .poem{
@@ -211,7 +217,7 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     border-radius: 1px;
     width: 40%;
     height: 5vh;
-    margin-left: -39%;
+    margin-left: 13%;
     margin-top: 5%;
     margin-bottom: 10%;
     border-radius: 20px;
@@ -224,7 +230,7 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
   .appear{
     margin-top:-5% ;
     margin-bottom: 10%;
-    margin-left: -38%;
+    margin-left: 9%;
   }
 
   .poemType{
@@ -246,16 +252,12 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     cursor: pointer;
   }
 
-  .allpoemTheme{
-    display: flex;
-    gap: 10px;
-  }
-
+  
 
   .versesArea{
     display: flex;
     flex-direction: row;
-    margin-left: 10%;
+    margin-left: 29%;
   }
 
   /* .text{
@@ -276,3 +278,14 @@ background: linear-gradient(90deg, rgb(90, 149, 221) 61%, rgb(132, 207, 230) 97%
     border: 5px solid #7400B8;
     border-style: double;
   }
+
+  .theNotRandomPoem{
+      border: 4px solid white;
+      border-style: double;
+      margin-left: 9%;
+      margin-right: 20%;
+      margin-top: -7%;
+      display: flex;
+      justify-content: center;
+      text-align: center; 
+  } 
